--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^7.4|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "pusher/pusher-php-server": "^7.0",
         "realrashid/sweet-alert": "^4.1",
         "spatie/laravel-permission": "^5.4",
         "yajra/laravel-datatables": "^1.5"
