--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "phpunit/phpunit": "^9.5",
         "pusher/pusher-php-server": "^7.0",
         "realrashid/sweet-alert": "^4.1",
         "spatie/laravel-permission": "^5.4",
@@ -24,8 +25,7 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "nunomaduro/collision": "^5.10"
     },
     "autoload": {
         "psr-4": {
